--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,3 @@
-<div class="container">
-  <h1 class="title">
-    {{ 'PAGES.HOME.TITLE' | translate }}
-  </h1>
-</div>
+<app-header></app-header>
+
+<img src="../../../assets/images/logo.svg" style="position:absolute;top:0;left:0;right:0;bottom:0;margin:auto;width:30rem;" alt="">
